removed reading scripts

--- a/blog.html
+++ b/blog.html
@@ -23,7 +23,7 @@ under_construction: "{{ site.is_under_construction }}"
     </a>
   {% endfor %}
 </section>
-<script>
+<!-- <script>
   document.addEventListener('DOMContentLoaded', function() {
     const postElements = document.querySelectorAll('.post');
 
@@ -40,4 +40,4 @@ under_construction: "{{ site.is_under_construction }}"
       }
     });
   });
-</script>
+</script> -->
