--- a/blog.html
+++ b/blog.html
@@ -20,7 +20,7 @@ under_construction: "{{ site.is_under_construction }}"
               {% assign formattedDate = post.date | date: "%d %b %Y" | upcase %}
               <span>{{formattedDate}}</span>
               <span>{{post.time}} READ</span>
-              <span class="{% if post.tags %}post_type{% endif %}">{{post.tag}}</span>
+              <span class="{% if post.tags %}post-type{% endif %}">{{post.tag}}</span>
             </div>
           </div>
           </div>
